# zed-flexiv-charuco-calib

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml
configs/: pass_bars.yaml
docs/: FRAMES.md  HARDWARE_SETUP.md  METHOD.md  PASS_BARS.md  PRIOR_ART.md  PROCEDURE.md  TUTORIAL.md  VERSIONS.md  index.md
docs/assets/photos/: README.md
src/zfcc/: __init__.py  _cli.py  config.py  coverage.py  diversity.py  intrinsics.py  refine.py  session.py
tests/: test_cli_smoke.py  test_coverage.py  test_diversity.py  test_intrinsics.py  test_refine.py
