[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zed-flexiv-charuco-calib"
version = "0.2.0"
description = "Strict eye-to-hand ChArUco calibration between a ZED 2i camera and a Flexiv Rizon arm, with a falsifiable validation suite."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Zihao Lu" }]
keywords = ["calibration", "hand-eye", "charuco", "opencv", "zed", "flexiv", "robotics", "eye-to-hand"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "opencv-contrib-python>=4.7",   # the aruco objdetect API (CharucoDetector) ships in contrib
    "pyyaml>=5.4",
]

[project.optional-dependencies]
zed = ["pyzed"]            # ZED SDK python API (installed via the SDK, not PyPI; declared for clarity)
refine = ["scipy>=1.7"]    # optional nonlinear bundle-adjustment refinement of the extrinsic
dev = ["pytest>=7", "ruff>=0.4", "pre-commit>=3", "scipy>=1.7"]

[project.urls]
Homepage = "https://github.com/ZihaoLu001/zed-flexiv-charuco-calib"
Issues = "https://github.com/ZihaoLu001/zed-flexiv-charuco-calib/issues"

[project.scripts]
zfcc-render-board = "zfcc._cli:render_board_main"
zfcc-intrinsics = "zfcc._cli:intrinsics_main"
zfcc-collect = "zfcc._cli:collect_main"
zfcc-solve = "zfcc._cli:solve_main"
zfcc-touch-test = "zfcc._cli:touch_test_main"
zfcc-inspect = "zfcc._cli:inspect_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zfcc = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "tests"]

[tool.ruff]
# 110 (not the default 88/100): the SE(3) / OpenCV numeric code reads better a little wider; still
# strict enough to catch genuinely unwieldy lines.
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E741", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]
"scripts/*" = ["E402"]
